@@ -75,6 +75,7 @@ Other features
  * Added ``Page.with_content_json()``, allowing revision content loading behaviour to be customised on a per-model basis (Karl Hobley)
  * Added ``construct_settings_menu`` hook (Jordan Bauer, Quadric)
  * Fixed compatibility of date / time choosers with wagtail-react-streamfield (Mike Hearn)
+ * Performance optimization of several admin functions, including breadcrumbs, home and index pages (Fidel Ramos)
 
 Bug fixes
 ~~~~~~~~~
